force-app/main/default/objects/WorkOrderLineItem/fields/C_digo_do_produto_ot__c.field-meta.xml
<CustomField>
    <fullName>C_digo_do_produto_ot__c</fullName>
    <formula>Product2.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código do produto</label>
    <type>Text</type>
</CustomField>