force-app/main/default/objects/WorkOrderLineItem/fields/Codigo_Hospcom__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Hospcom__c</fullName>
    <formula>Product2.StockKeepingUnit</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Hospcom</label>
    <type>Text</type>
</CustomField>