force-app/main/default/objects/WorkOrderLineItem/fields/Estoque_atende__c.field-meta.xml
<CustomField>
    <fullName>Estoque_atende__c</fullName>
    <formula>IF( Quantity &lt;= Estoque_disponivel__c , &apos;SIM&apos;, &apos;NÃO&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estoque atende</label>
    <type>Text</type>
</CustomField>