force-app/main/default/objects/WorkOrderLineItem/fields/Estoque_disponivel__c.field-meta.xml
<CustomField>
    <fullName>Estoque_disponivel__c</fullName>
    <formula>Product2.Estoque_disponivel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estoque disponivel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>