force-app/main/default/objects/WorkOrderLineItem/fields/Imagem__c.field-meta.xml
<CustomField>
    <fullName>Imagem__c</fullName>
    <formula>Product2.Imagem_do_Produto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagem</label>
    <type>Text</type>
</CustomField>