force-app/main/default/objects/WorkOrderLineItem/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>