force-app/main/default/objects/WorkOrderLineItem/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <formula>Product2.Modelo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modelo</label>
    <type>Text</type>
</CustomField>