force-app/main/default/objects/WorkOrderLineItem/fields/Nome_do_produto__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_produto__c</fullName>
    <formula>Product2.Name</formula>
    <label>Nome do produto</label>
    <type>Text</type>
</CustomField>