force-app/main/default/objects/WorkOrderLineItem/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Itens de linha da ordem de trabalho</relationshipLabel>
    <relationshipName>Itens_de_linha_da_ordem_de_trabalho</relationshipName>
    <type>Lookup</type>
</CustomField>