force-app/main/default/objects/WorkOrderLineItem/fields/Total_Estimado__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimado__c</fullName>
    <formula>(UnitPrice*Quantity)-((UnitPrice*Discount)*Quantity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Estimado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>