force-app/main/default/objects/WorkOrderLineItem/validationRules/Valor_zerado.validationRule-meta.xml
<ValidationRule>
    <fullName>Valor_zerado</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    TEXT(WorkOrder.Categoria__c) != &apos;GARANTIA DE FÁBRICA&apos;,
     PricebookEntry.Product2Id != &apos;01t6e000009a4CA&apos;,
    OR(
        UnitPrice = 0,
        ISBLANK(UnitPrice)
    )
)</errorConditionFormula>
    <errorDisplayField>UnitPrice</errorDisplayField>
    <errorMessage>O valor não pode ser 0.</errorMessage>
</ValidationRule>